--- a/Deployment/deploy.yml
+++ b/Deployment/deploy.yml
@@ -4,8 +4,8 @@
   vars:
     ansible_python_interpreter: /usr/bin/python3
   tasks:
-    - name: Test running docker ps
-      shell: docker ps -a
+    - name: Test running docker ps with sudo
+      shell: sudo docker ps -a
       register: docker_ps_output # Register the output for inspection
     - name: Print docker ps output
       debug:
